--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -35,7 +35,7 @@
 
 	<module-components>
 		<component>
-			<implementation-class>org.jibx.plugins.intellij.BindingCompilerModuleComponent</implementation-class>
+			<implementation-class>org.jibx.plugins.intellij.compiler.BindingCompilerModuleComponent</implementation-class>
 		</component>
 		<!--<component>-->
 		<!--<implementation-class>org.jibx.plugins.intellij.psi.JiBXReferencesToJavaCode</implementation-class>-->
@@ -43,16 +43,16 @@
 	</module-components>
 
 	<!--<extensions defaultExtensionNs="com.intellij">-->
-	<!--<annotator implementationClass="org.jibx.plugins.intellij.psi.JiBXAnnotator" language="XML" />-->
+	<!--<annotator implementationClass="org.jibx.plugins.intellij.annotator.JiBXAnnotator" language="XML" />-->
 	<!--</extensions>-->
 
 	<actions>
-		<action class="org.jibx.plugins.intellij.actions.AddMappingAction"
+		<action class="org.jibx.plugins.intellij.compiler.AddMappingAction"
 				text="Use as JiBX mapping"
 				id="jibx-use-as-mapping">
 			<add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>
 		</action>
-		<action class="org.jibx.plugins.intellij.actions.DeleteMappingAction"
+		<action class="org.jibx.plugins.intellij.compiler.DeleteMappingAction"
 				text="Don't use as JiBX mapping"
 				id="jibx-not-use-as-mapping">
 			<add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>
