--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -6,7 +6,7 @@
 	<description>
         Runs JiBX binding compiler after the javac compiler has run.
 
-        All the hard work was done by Jerome Bernard (jerome.bernard@kalixia.com)
+        All the hard work was originally done by Jerome Bernard (jerome.bernard@kalixia.com)
         <![CDATA[
         <p>
             Automatically figures out what files are JiBX files by using a regex: <code>^.*/src/main/.*jibx.*/.*\.xml$</code>
@@ -16,8 +16,9 @@
         <p>
             TODO
             * Implement completion on class fields in JiBX mapping file
+            * Implement navigation from JiBX mapping file to class/fields.
             * Update to use the latest version of JiBX
-            * Add a java code references to the JiBX bindings files
+            * Add java code references to the JiBX bindings files (i.e., when searching for usages of a field IDEA will show it as being used by JiBX)
             * Improve detection of JiBX files
             * Add config that lists all the files and allows some to be deselected
             * Implement feature that will re-run the JiBX files auto detection [work done by jerome]
@@ -34,7 +35,7 @@
 <pre>datetime
 1.0-SNAPSHOT (21/03/12 8:32 PM)
 - Added auto detection of JiBX files based of a simple regex
-- JiBX compiler is run after compile
+- JiBX compiler is run after every compile
 </pre>
 ]]>
 	</change-notes>
