--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,8 +1,6 @@
 <!DOCTYPE idea-plugin PUBLIC "Plugin/DTD" "http://plugins.intellij.net/plugin.dtd">
 <idea-plugin>
-	<name>
-        Cold JiBX binder
-    </name>
+	<name>Cold JiBX binder</name>
 	<description>
         <![CDATA[
 <pre>
@@ -43,12 +41,15 @@ TODO
 </pre>
     ]]>
 	</description>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<vendor url="http://www.coldeq.net.au" email="dimitri.koussa@gmail.com">Dimitri Koussa</vendor>
 	<idea-version since-build="129.451"/>
 	<change-notes>
 <![CDATA[
 <pre>
+1.1-SNAPSHOT (2013-06-03)
+- Fixed bug where jibx files without a mapping element were causing an error
+
 1.0 (2013-06-02)
 - Added auto detection of JiBX files based
   of a simple regex
