--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -40,7 +40,7 @@ TODO
 </pre>
     ]]>
 	</description>
-	<version>1.3</version>
+	<version>1.4-SNAPSHOT</version>
 	<vendor url="http://www.coldeq.net.au" email="dimitri.koussa@gmail.com">Dimitri Koussa</vendor>
 	<idea-version since-build="129.451"/>
 	<change-notes>
@@ -48,6 +48,7 @@ TODO
 <pre>
 1.3 (2013-06-13)
 - Upgraded JiBX to 1.2.5
+- Made less verbose
 
 1.2 (2013-06-07)
 - Fixed bug where plugin would attempt to run the JiBX binding compiler even when there were compile
